--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,17 @@ body{
     margin: auto;
     border-radius: 20px;
     padding: 5px;
-    color: #f0f0f0;
+    
     font-weight: bold;
+}
+
+article p{
+    font-size: 1.4rem;
+    font-weight: bold;
+
+}
+
+article p span{
+    font-size: 1.2rem;
+    font-weight: 500;
 }
